--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.sonarqube.examples</groupId>
-    <artifactId>java-maven-travis-project</artifactId>
+    <groupId>com.sonarsource</groupId>
+    <artifactId>citytour2019-java</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>Java Maven-based project analyzed on SonarCloud using Travis</name>
     <url>https://github.com/SonarSource/sq-com_example_java-maven-travis</url>
