--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
     <groupId>com.sonarsource</groupId>
     <artifactId>citytour2019-java</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>Java Maven-based project analyzed on SonarCloud using Travis</name>
-    <url>https://github.com/SonarSource/sq-com_example_java-maven-travis</url>
+    <name>City Tour - .NET project</name>
+    <url>https://github.com/SonarSource-City-Tour/city-tour-java</url>
 
     <scm>
-        <connection>scm:git:git@github.com:SonarSource/sq-com_example_java-maven-travis.git</connection>
-        <developerConnection>scm:git:git@github.com:SonarSource/sq-com_example_java-maven-travis.git</developerConnection>
-        <url>https://github.com/SonarSource/sq-com_example_java-maven-travis</url>
+        <connection>scm:git:git@github.com:SonarSource-City-Tour/city-tour-java.git</connection>
+        <developerConnection>scm:git:git@github.com:SonarSource-City-Tour/city-tour-java.git</developerConnection>
+        <url>https://github.com/SonarSource-City-Tour/city-tour-java</url>
     </scm>
 
     <properties>
