--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ sudo: false
 install: true
 
 script:
-  # JaCoCo is used to have code coverage, "-Pcoverage" activates the maven profile in the pom.xml
-  - mvn clean verify sonar:sonar -Pcoverage -Dsonar.host.url=https://next.sonarqube.com/sonarqube/
+  - ./runAnalysis.sh
 
 cache:
   directories:
